# smarthub

./: .gitignore  README.md  commit_message.txt  pyproject.toml
app/: main.py  routes_chat.py
core/: big_llm.py  decide_and_reply.py  history.py  intent_extractor.py  interface.py  llm_client.py  resolver.py  summarizer.py
data/: builders.py  embedding.py  models.py  repo.py  schema_cache.py  search_actions.py  search_devices.py  search_interface.py  vectors.py  vectors_actions.py  vectors_devices.py
docker/: docker-compose.yml
ha/: client.py  syncer.py
scripts/: httptest.py  run_pipeline.py  testintent.py  testsearch.py  testsync.py
scripts/lancedb/main.lance/_transactions/: 0-57e9d98c-66fd-4953-872f-5cdb28c08513.txn  1-126087c2-3a9f-425f-a0b1-0c4e68cc7727.txn  10-65b3af67-e865-4887-809b-81cb2a8ac275.txn  100-c8908b38-88c2-4036-9a30-12d098f5ccd0.txn  1000-7e2edb18-3fc4-4669-9231-3ace366a2f4c.txn  1001-05b2e95b-28b2-43e9-bc7b-32bd5638e5b7.txn  1002-88f5b200-95d2-4d00-a7f9-10d066ccff74.txn  1003-fd025c9b-56a2-467e-b1df-d19f7fb64c0e.txn  1004-0dab51a0-cf8b-49c2-9eef-6334ad85184c.txn  1005-084cb58b-966e-4d7e-897c-66c53169f631.txn  1006-9f8141fc-97c9-4563-b065-47291cdd4fc6.txn  1007-95e0a181-de06-4449-b6a5-a7d0c9021cd7.txn  1008-d96c93d9-6fe4-48d0-8b03-03e17b253e63.txn  1009-06da2406-7468-461b-ba01-85a0508612d6.txn  101-c3c868e2-ee2f-42da-93ff-25343d91dbbc.txn  (+1018 more)
smarthub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_turns.py
tests/ha/: test_ha_client.py
utils/: env.py  filters.py  ids.py  jsonio.py  logging.py
(+1119 files in other folders)
